--- a/moviedb/package.json
+++ b/moviedb/package.json
@@ -1,6 +1,7 @@
 {
   "name": "moviedb",
   "version": "0.1.0",
+  "homepage": "https://DASyhef.github.io/La-Mouette-MoviesDB",
   "private": true,
   "dependencies": {
     "react": "^18.2.0",
@@ -12,7 +13,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
@@ -25,5 +28,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
+
 }
